# QHDALabs-Axon

./: .gitignore  LICENSE  Manifest.md  PROJECT_SKELETON.md  README.md  RELATION_STATUS.md  SETUP_COWORK_CODE_WINDOWS.md  VERIFICATION_LOG.md  pyproject.toml  requirements-dev.txt  requirements.txt  v2a_confirmatory.json
.claude/: CLAUDE.md  instructions.md  settings.json
.github/workflows/: ci.yml
data/: bridge_corpus.README.md  bridge_corpus.json  corpus_mvp.README.md  corpus_mvp.json  heldout_corpus.README.md  heldout_corpus.json
docs/: ABC_BRIDGE_V2A_TIER0_DRAFT.md  ABC_BRIDGE_V2A_TIER0_PRE_REGISTRATION.md  ABC_BRIDGE_V2A_TIER0_PROPOSED_UNPILOTED_DESIGN.md  OP2_SIBLING_SEPARATION_TIER0_CARD_DRAFT.md  V2A_GENERATOR_PILOT_DEV.md
docs/method_cards/: ABC_BRIDGE.md  PROXIMITY_MVP.md
examples/: abc_bridge_recovery.py  axon_pipeline.py  migraine_magnesium_heldout.py  mvp_proximity_null.py  wildfire_relational.py
scripts/: confirmatory_v2a_tier0.py  fetch_bridge_corpus.py  fetch_corpus.py  fetch_heldout_corpus.py  gen_relation_status.py  pilot_v2a_grid.py  pilot_v2a_tier0.py  validate_mesh_artifact.py
src/: __init__.py
src/axon/: __init__.py  types.py
src/axon/hypothesis/: __init__.py  surface.py
src/axon/perception/: __init__.py  featurize.py  ingest.py
src/axon/relational_representation/: __init__.py  literature_store.py  relation_store.py
src/axon/verification/: __init__.py  bridge.py  multiple_testing.py  null_models.py  peer_selection.py  registry.py  selectivity.py  sibling_safety.py  tier0_generator.py  verifier.py
src/qhda_core/: __init__.py  types.py
src/qhda_core/emergent/: __init__.py  clock.py
src/qhda_core/quantum/: __init__.py  circuits.py
src/qhda_core/relational/: __init__.py  state.py
tests/: test_bridge_recovery.py  test_heldout_recovery.py  test_integration.py  test_pipeline_corpus.py  test_relation_status.py  test_smoke.py  test_structure.py
tests/fixtures/mesh/: mesh_fragment.xml  op2_headache_fixture.xml
tests/hypothesis/: test_hypothesis.py
tests/perception/: test_featurize.py  test_ingest.py
tests/relational_representation/: test_relation_store.py
tests/verification/: test_bridge.py  test_confirmatory_v2a.py  test_multiple_testing.py  test_peer_resolution.py  test_peer_selection.py  test_peer_selection_collisions.py  test_peer_selection_rule.py  test_peer_selection_wiring.py  test_pilot_runner_split.py  test_registry.py  test_selectivity.py  test_sibling_safety.py  test_tier0_generator.py  test_verifier.py
