[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qhdalabs-axon"
version = "0.1.0"
description = "Axon — the Science Nervous System: a relation-first, verification-before-discovery layer over the scientific literature"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "RCSAL-2.0" }
authors = [{ name = "Krzysztof Banasiewicz" }]
keywords = ["literature-based-discovery", "relations", "verification", "qhda-core", "scientific-literature"]

# ── Core dependencies ──
# Axon CONSUMES qhda-core; it does not vendor or reimplement it.
# The relational layer is pure numpy and must work with Qiskit NOT installed.
dependencies = [
    "qhda-core>=0.1.0",
    "numpy>=1.24",
]

# ── Optional dependencies (extras) ──
# The quantum layer is wired in only where it earns its place. It is pulled in
# via qhda-core's own [quantum] extra, mirroring qhda-core's dependency boundary:
#   pip install "qhdalabs-axon[quantum]"   → qhda-core[quantum] (Qiskit)
[project.optional-dependencies]
quantum = [
    "qhda-core[quantum]>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/QHDALabs/QHDALabs-Axon"
Repository = "https://github.com/QHDALabs/QHDALabs-Axon"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── Static typing (config-as-code: identical locally and in CI; CI runs `mypy src scripts`) ──
# Axon is fully type-checked: the verification-before-discovery contract becomes a
# STATIC guarantee, not just a runtime one. src-layout is made visible to mypy so the
# package resolves as `axon`, not `src.axon`; scripts/ is on the path too so sibling
# dev-script imports (e.g. pilot_v2a_grid -> pilot_v2a_tier0) resolve under the gate.
[tool.mypy]
python_version = "3.12"
mypy_path = ["src", "scripts"]
explicit_package_bases = true
namespace_packages = true
strict = true
warn_unused_configs = true

# qhda-core is consumed as a dependency and ships no type stubs. Ignore ITS missing
# types narrowly, per-module — never globally — so Axon's own code stays fully checked.
[[tool.mypy.overrides]]
module = "qhda_core.*"
ignore_missing_imports = true
